--- a/DvachBrowser3/Views/Partial/MarkupControl.xaml
+++ b/DvachBrowser3/Views/Partial/MarkupControl.xaml
@@ -9,7 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <VariableSizedWrapGrid Orientation="{x:Bind Orientation, Mode=OneWay}">
+    <StackPanel Orientation="{x:Bind Orientation, Mode=OneWay}">
         <Button x:Name="BoldButton" Margin="2" Padding="2" ToolTipService.ToolTip="Жирный" Click="BoldButton_OnClick">
             <Viewbox Height="16" Width="16">
                 <SymbolIcon Symbol="Bold" />
@@ -50,5 +50,5 @@
                 <FontIcon FontFamily="Segoe UI" Glyph="A" />
             </Viewbox>
         </Button>
-    </VariableSizedWrapGrid>
+    </StackPanel>
 </UserControl>
