Изменение формата сериализации (Binary XML) + набор врапперов для других форматов и унифицированный интерфейс для сериализации в файлы

--- a/DvachBrowser3/Views/TestingPage.xaml
+++ b/DvachBrowser3/Views/TestingPage.xaml
@@ -9,7 +9,15 @@
       xmlns:behaviors="using:Template10.Behaviors"
       xmlns:partial="using:DvachBrowser3.Views.Partial"
       xmlns:system="using:System"
+      xmlns:pageServices="using:DvachBrowser3.PageServices"
       mc:Ignorable="d">
+    
+    <pageServices:PageServices.Services>
+        <pageServices:PageServiceCollection>
+            <pageServices:ShellAppBarPageService />
+            <pageServices:NoStatusBarProgressPageService />
+        </pageServices:PageServiceCollection>
+    </pageServices:PageServices.Services>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -70,6 +78,10 @@
         </Grid>
     </Grid>
 </Page>
+
+
+
+
 
 
 
